# Jonker-Volgenant

./: .gitignore  CMakeLists.txt  JonkerVolgenant.pc.in  JonkerVolgenantLib.pc.in  LICENSE.md  Makefile  README.md  _CMakeLists.txt  assignAlgs2D.h  interface.c
src/: assign2DCBasic.c  assignAlgs2D.h  interface.c
